food-logo-bar and icon done

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
+
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 <body>
 
@@ -26,6 +29,15 @@
         <button>
             Submit
         </button>
+    </section>
+
+    <section class="food-logo-bar">
+        <ul>
+            <li><a href="#"><i class="fa-solid fa-drumstick-bite"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-fish"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-egg"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-bacon"></i></a></li>
+        </ul>
     </section>
 
     <script src="script.js"></script>
